fixed alignment

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -7,7 +7,7 @@
   gap: 3rem;
   margin-bottom: 5rem;
   padding: 1rem;
-  height: 55vh;
+  margin-top: 6%;
 }
 
 .about {
